# objective

./: CMakeLists.txt  README.md  toolchain.cmake
kernel/: boot.s  kernel.cpp
